fix blog container body on mobile view

--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -1173,6 +1173,14 @@ button {
   .nav-flex .hamburger-menu {
     display: flex !important;
   }
+
+  .blog-container .blog-body {
+    padding: 2rem 2.5rem;
+  }
+  .blog-container .blog-body h1 {
+    margin-top: 0;
+    font-size: 35px;
+  }
 }
 @media screen and (max-width: 570px) {
   h1 {
@@ -1197,7 +1205,7 @@ button {
   }
 
   .blog-container .blog-body {
-    padding: 2.5rem 3rem;
+    padding: 1.5rem 1rem;
   }
   .blog-container .blog-body h1 {
     margin-top: 0;
