--- a/src/sass/queries/queries.sass
+++ b/src/sass/queries/queries.sass
@@ -109,6 +109,14 @@
         .hamburger-menu 
             display: flex !important
 
+    .blog-container
+        .blog-body
+            padding: 2rem 2.5rem
+
+            h1 
+                margin-top: 0
+                font-size: 35px
+
 
 @media screen and (max-width: 570px)
     h1 
@@ -130,7 +138,7 @@
 
     .blog-container
         .blog-body
-            padding: 2.5rem 3rem
+            padding: 1.5rem 1rem
 
             h1 
                 margin-top: 0
